fixed truncate css error on sidebar and added a key on a div mapping

--- a/src/components/sidebar/style.css
+++ b/src/components/sidebar/style.css
@@ -275,9 +275,9 @@
     margin-left: 10px;
     text-decoration: none;
     color: #fff;
-    font-size: 14px;
+    font-size: 13px;
     font-weight: 500;
-    width: 160px;
+    width: 130px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
